# sg-api-fas-rust

./: Cargo.toml  README.md  test.http
html/: index.html
src/: main.rs
src/handlers/api/: auth.rs  filters.rs  locations.rs  mod.rs  ping.rs
src/models/: app_state.rs  filters.rs  mod.rs
src/repos/: filters_repo.rs  mod.rs
src/services/: filters_service.rs  mod.rs
